# rftiny

./: CMakeLists.txt  LICENSE  README.md  rftiny.c  rftiny.h
examples/: rftiny.c
examples/attiny26/: Makefile  baudrate_calculator.py  rftiny.c  rftiny_send.c  rx.drawio  test.py  tx.drawio
examples/rpi-pico/: CMakeLists.txt
include/: rftiny.h
src/: rftiny.c
tests/: rftiny.c
tests/attiny10/: attiny10-toolchain.cmake  baudrate_calculator.py  rftiny.c
tests/rpi-pico/: rftiny.c
